# facex

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  bench_node.mjs  detect.wasm  index.html  package-lock.json  package.json
articles/: habr.html  linkedin.html  linkedin_10.html  reddit_programming.html  story.html  story_ru_threads.html  threads.html
components/facex/: CMakeLists.txt  Kconfig
components/facex/include/: facex_esp.h
components/facex/src/: facex_esp.c
docs/: benchmarking.md  coverage_matrix.md  esp32p4.md  implementation.md  imx_npu.md  mac.md
docs/bench/: cumulative.md  imx8mp_baseline.csv  m2_baseline.csv
docs/demo/: align.js  bench.html  facex.js  facex.wasm  index.html
docs/imx8mp_npu/: README.md  edgeface_xs_int8.tflite  profiling.md  runbook.md
docs/legacy/: det_bin_format.md  detect.wat  detect_notes.md
docs/plan/: detector_plan.md  imx8mp_npu_bringup.md  imx8mp_plan.md  sprint4_decision.md
examples/: example.c
examples/esp32p4_camera/: CMakeLists.txt  README.md  sdkconfig.defaults
go/facex/: facex.go  fastface.go  go.mod
include/: compat.h  detect.h  facex.h  facex_backend.h  facex_coreml.h  facex_npu.h  weight_crypto.h
scripts/: bench_all.sh  test_all.sh
src/: backend_accelerate.c  backend_coreml.m  backend_tflite.c  cpu_features.c  cpu_features.h  detect.c  edgeface_engine.c  facex.c  gemm_int8_4x8c8.c  gemm_stub.c  threadpool.c  threadpool.h  threadpool_pthread.c  transformer_ops.c  transformer_ops_sme.c  weight_crypto.c
tests/: bench_detect.c  golden_test.c  test_detect.c  test_detect_raw.c  test_e2e.c  test_face_160.raw  test_imx_npu_compile.c  test_mac.c
tools/: bench.c  bench_camera_mac.swift  bench_npu.c  build_bench_camera_mac.sh  compile_neutron.sh  compile_vela.sh  dump_det_bin.py  export_coreml.py  export_yunet_weights.py  onnx_to_tflite.py  yunet_golden.py
tools/imx8mp/: convert_tflite.sh  export_edgeface_onnx.sh
wasm/: cache.js  detect.js  facex-sdk.d.ts  facex-sdk.js  liveness.js  package.json  simd_check.js  worker.js
wasm/src/: detect.c  detect_api.c  dw_conv_fused.c  dw_conv_int8.c  gemm_int8_rsimd.c  gemm_int8_scalar.c  postprocess.c  upsample.c
weights/: yunet_fp32_names.txt
(+4 files in other folders)
